:sparkles: Added footer styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,5 +62,35 @@ a {
 }
 
 .big {
-    width: 10rem;
+    width: 11rem;
+}
+
+.footer-link {
+    font-size: 0.95rem;
+}
+
+.copyright {
+    font-size: 0.75rem;
+}
+
+.underline {
+    position: relative;
+}
+
+.underline:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: var(--white);
+    transform-origin: bottom right;
+    transition: transform 0.25s ease-out;
+}
+
+.underline:hover:after {
+    transform: scaleX(1);
+    transform-origin: bottom left;
 }
