--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,10 @@ a {
     text-decoration: none;
 }
 
+footer {
+    width: 300px;
+}
+
 /* Sidebar */
 .sidebar {
     background-color: var(--primary-dark);
@@ -33,6 +37,54 @@ a {
 
 .sidebar-icon:hover {
     background-color: var(--secondary-dark);
+}
+
+/* Platforms */
+.platforms .arrow {
+    width: 8rem;
+    display: flex;
+}
+
+.platforms {
+    max-width: 300px;
+}
+
+.buttons {
+    scroll-behavior: smooth;
+}
+
+.buttons.dragging {
+    scroll-behavior: auto;
+    cursor: grab;
+}
+
+.buttons button {
+    min-width: 7rem;
+    user-select: none;
+}
+
+.arrow:first-child {
+    display: none;
+    left: 0;
+    padding-left: 1rem;
+    background: linear-gradient(90deg, var(--background-dark) 50%, transparent);
+}
+
+.arrow:last-child {
+    right: 0;
+    padding-right: 1rem;
+    background: linear-gradient(-90deg, var(--background-dark) 50%, transparent);
+}
+
+.arrow i {
+    width: 40px;
+    height: 40px;
+    cursor: pointer;
+    transition: .2s ease;
+}
+
+.arrow i:hover {
+    background-color: var(--primary-dark);
 }
 
 /* Buttons */
@@ -140,3 +192,38 @@ a {
     background-color: var(--primary-dark);
     background-size: cover;
 }
+
+@media (max-width: 767px) {
+    .arrow {
+        display: none !important;
+    }
+}
+
+@media (min-width: 768px) {
+    .platforms {
+        max-width: 800px;
+    }
+    footer {
+        width: auto;
+    }
+}
+
+@media (min-width: 992px) {
+    .platforms {
+        max-width: 1000px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .platforms {
+        max-width: 1206px;
+    }
+}
+
+@media (min-width: 1400px) {
+    .platforms {
+        max-width: calc(100vw - 200px);
+    }
+}
+
+
